1.文档说明完善 2.场景Flinker支持本地模式